
Aug 25, 2011 - chris ---------------------------------------------------
o configure.in: AM_INIT_AUTOMAKE requests now version 1.10 (thanks, Ger)

Aug 25, 2011 - chris ---------------------------------------------------
o enabled large file support for 32bit linux (thanks, liheyuan)

Aug 22, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.13

Aug 09, 2011 - chris ---------------------------------------------------
o bugfix: when aborting a transaction, modified pages would be recreated from 
    the log even if the current transaction was read-only. This caused a 
    performance regression compared to 1.1.9 (thanks, Jake)

Jul 01, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.12

Jul 01, 2011 - chris ---------------------------------------------------
o exported two internal functions as test gateways: ham_env_get_device
	and ham_env_set_allocator (in ham/hamsterdb_int.h)

Jul 01, 2011 - chris ---------------------------------------------------
o bugfix: there was still a problem in the cache purge algorithm, and the
	memory consumption passed the cache boundaries. (Thanks, Jake)

Jun 30, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.11

Jun 27, 2011 - chris
o fixed a performance regression - when Transactions are enabled, the file
	was frequently flushed via fsync() even if HAM_WRITE_THROUGH was not
	set (thanks, Jake and Colm)

Jun 26, 2011 - chris
o the ./configure switch --enable-internal is now obsolte and enabled by
	default

Jun 20, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.10

Jun 18, 2011 - chris ---------------------------------------------------
o the flag HAM_WRITE_THROUGH will now cause an immediate flush of all file
	handles to disk (via fdatasync or fsync, if fdatasync is not available, 