@@ -11,6 +11,6 @@ x a finished TODO item
 This branch is in "maintenance mode". New features are on the branch 
 "bleeding_edge" (version 2.0.0.rc1 and newer).
 
-o allow files > 2 GB (see TODO on bleeding_edge branch)
-o allow cachesize > 4 GB (currently it's a 32bit number)
+x allow files > 2 GB (see TODO on bleeding_edge branch)
+x allow cachesize > 4 GB (currently it's a 32bit number)
 o new function ham_cursor_get_record_size()
